syntax = "proto3";

option go_package = "./rpc";
option java_multiple_files = true;
option java_package = "io.grpc.examples.helloworld";
option java_outer_classname = "HelloWorldProto";

package rpc;

service InventoryRpc {
    rpc CheckStock(CheckStockRequest) returns (ItemStock) {}
    rpc ReserveStock(ReserveStockRequest) returns (ReserverResponse) {}
    rpc ReleaseStock(ReleaseStockRequest) returns (ReleaseResponse) {}
}

message CheckStockRequest {
    string itemId = 1;
}

message ItemStock {
    string itemId = 1;
    int32 stock = 2;
    int32 version = 3;
}

message ReserveStockRequest {
    string itemId = 1;
    int32 qty = 2;
    int32 version = 3;
}

message ReserverResponse {
    string itemId = 1;
    int32 version = 2;
    int32 stockReduced = 3;
    int32 stockRemaining = 4;
}

message ReleaseStockRequest {
    string itemId = 1;
    string orderId = 2;
    int32 qty = 3;
}

message ReleaseResponse {
    string itemId = 1;
    int32 qty = 2;
    int32 version = 3;
    int32 stockReleased = 4;
    int32 stockRemaining = 5;
}